# OneNoteDecoder

./: .gitignore  CMakeLists.txt  FileChunkReference32.cpp  FileChunkReference64.cpp  FileChunkReference64x32.cpp  FreeChunkListFragment.cpp  Guid.cpp  Header.cpp  README.md  TransactionLogFragment.cpp  decode.cpp
Helpers/: BinFile.hpp
Structures/: ExtendedGuid.hpp  FileChunkReference.hpp  FileChunkReference32.hpp  Guid.hpp
all_tests/: CMakeLists.txt  testcases.hpp
all_tests/test_cases/: BinFile.hpp  BitReader.hpp  guid.hpp
common/FileNodeList/: FileNodeListFragment.hpp  FileNodeListHeader.hpp
common/FileNodeTypes/: ObjectSpaceManifestListReferenceFND.hpp
common/FileStructure/: Header.hpp  RootFileNodeList.hpp
common/Helpers/: BitReader.hpp  LogDuration.hpp
common/Structures/: FileChunkReference.hpp  FileChunkReference32.hpp  FileChunkReference64.hpp  FileChunkReference64x32.hpp  FreeChunkListFragment.hpp  Guid.hpp  Primitive.hpp  TransactionEntry.hpp  TransactionLogFragment.hpp
cpp_tests/BinFile/: test.cpp
cpp_tests/OneNoteFileHeader/: test.cpp
src/: decode.cpp
src/FileNodeList/: FileNode.hpp  FileNodeIDValues.hpp
src/FileNodeTypes/: FileNodeBase.hpp  ObjectSpaceManifestRootFND.hpp
src/FileStructure/: OneNoteRevisionStore.hpp
src/Helpers/: BitReader.hpp  Vec.hpp  (+1 more)
tests/: CMakeLists.txt  Guid.cpp_1  guid  guid.cpp  testcases.hpp  unit_tests.cpp
tests/Guid/: test.cpp
tests/OneNoteFileHeader/: test.cpp
tests/cpp_tests/BinFile/: test.cpp
tests/cpp_tests/Guid/: test.cpp
tests/unit_tests/: BinFile.hpp  BitReader.hpp  guid.hpp  test.hpp
(+24 files in other folders)
